--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TOKEN_SECRET=fgvfgfgfgfgf4r4r4r84r4rmrCFR$F$4r4r4R$RF$F4ewr3343ef4F4f4rf
 MONGODB_URL=mongodb://localhost:27017/diahoo
-# MONGODB_URL=mongodb+srv://naiemhosen430:1S1jnEyfG6byiAjy@cluster0.7kbfpvd.mongodb.net/?retryWrites=true&w=majority
+# MONGODB_URL=mongodb+srv://naiemhosen430:dYmdU72QFfrGsstM@cluster0.cwnxece.mongodb.net/?retryWrites=true&w=majority
