--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cookies-next": "^4.1.1",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
